--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,8 @@
 include inventory
+include LICENSE
+include README.md
+include ansible-sign.png
+include secure-org_pubkey.asc
 recursive-include playbooks *.yml
 recursive-exclude * .git/*
 recursive-exclude .git *
