--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,7 @@ include LICENSE
 include README.md
 include ansible-sign.png
 include secure-org_pubkey.asc
+include .ansible-sign *
 recursive-include playbooks *.yml
 recursive-exclude * .git/*
 recursive-exclude .git *
