--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,5 +4,6 @@ include README.md
 include ansible-sign.png
 include secure-org_pubkey.asc
 recursive-include playbooks *.yml
+recursive-include scripts *.sh
 recursive-exclude * .git/*
 recursive-exclude .git *
